Commander Genius Release :
==========================

v0.3.2.5:
---------
- Keen now can climb poles (Galaxy)
- Keen now can hang on cliff and climb then up (Galaxy)
- improved some galaxy physics

v0.3.2.4:
---------
- Less loading time
- Added nice Loading Screen
- Diagonal Keys are now supported
- Improved the hq sound quality
- minor bug fixes
- New threadpool which is used by the Loading Screen

v0.3.2.3:
---------
- Now Game shouldn't crash when playing music
- improved Vorticon physics

v0.3.2.2:
---------
- Music is now streamed
- Added tremor support
- Even better Sound support
- Several physic changes
- Keen now can walk in levels in Galaxy
- More mods are supported

v0.3.2.1:
---------
- more AI fixes
- Added support for mods which use the palette patch code
- 48 Khz is back again, after many months, but this time working correctly!
- better push and bump physics
- more of the Galaxy Engine. Keen now can walk on map.
- Added Cannon fire sound
- Added HUD Display, the one Chad had suggested
- Small memory issues fixed
- Improved memory management for foes.
- Keen 4 now works and can be played on map
- even faster and more Badass!

v0.3.2:
---------
- OpenGL improvements especially for iPhone!!
- Faster Game loads!
- Other segfault fixes!!
- Improved Mod support (Especially for Keen X and Yorphius II)
- Now HQ Sprites are supported!
- faster loading maps algorithm and less memory used
- more Galaxy Code!
- Code cleanups!
- Improved Patch-Code
- Improved Garg AI
- Improved Scrub AI
- Teleporter fixes
- Now enemies blink, when they get a hit
- Small improvement of the player physics
- New configuration file parser which makes loading and saving even faster!

v0.3.1.3:
---------
- Savegames are now separated per game
- bit more galaxy code
- fixed filename search problems
- even faster and more colourful menu

v0.3.1.2:
---------
- a bit faster and more colourful menu

v0.3.1.1:
---------
- Volume sliders
- Camera bounds config