@@ -11,7 +11,7 @@
 *    (c)2009-2010            DaVince         *
 *           Released under GNU/GPL           *
 *                                            *
-*            Release v0.3.2.4                *
+*            Release v0.3.2.5                *
 *                                            *
 **********************************************
 
